初回描画時にフォームへのフォーカスを設定

--- a/a-tag_getter.html
+++ b/a-tag_getter.html
@@ -101,6 +101,7 @@
 		$(function(){
 			$('.row').hide();
 			$("#loading").hide();
+			$('.form-search [name=url_text]').focus();
 		});
 				
 		//hero-unitを押下した場合は再表示
